fix some warnings